--- a/p3/customer_segments.ipynb
+++ b/p3/customer_segments.ipynb
@@ -81,34 +81,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 440 entries, 0 to 439\n",
-      "Data columns (total 6 columns):\n",
-      "Fresh               440 non-null int64\n",
-      "Milk                440 non-null int64\n",
-      "Grocery             440 non-null int64\n",
-      "Frozen              440 non-null int64\n",
-      "Detergents_Paper    440 non-null int64\n",
-      "Delicatessen        440 non-null int64\n",
-      "dtypes: int64(6)\n",
-      "memory usage: 20.7 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "#checking if there are any NaNs in our data\n",
-    "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 135,
    "metadata": {},
    "outputs": [
@@ -253,7 +225,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the statistical describtion above we see the mean is much larger than median (50% procentile) while basically means there might be some outliers in our data which we would need to watch out, this assumption also confirmed by large standard deviation, which basically indicates that most of out data points are far from the mean. Most probably our data (for all 6 product categories) is scewed to right. \n"
+    "From the statistical describtion above:\n",
+    "\n",
+    "- the mean is considerably larger than the median (50% procentile) therefore we need to watch out for the ourliers, that \"drag\" the mean to the right side of the distribution.\n",
+    "\n",
+    "- the standard deviation is large that suggests our data points are far from the mean, which indicates the data must be scewed to right. \n"
    ]
   },
   {
@@ -384,11 +360,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "`data[43]` datapoint looks like some cafe: a lot of milk, grocery and detergents\n",
+    "`data[43]` datapoint is a customer with considerable purchase costs on Milk, Grocery and Detergents categories, which are main items in cafe/restaurants expenditures. \n",
     "\n",
-    "`data[131]` datapoint id most likely to be a household since all the values are way below average values across all product categories\n",
+    "`data[131]` datapoint is distinct by its small total costs across all product categories, so we may assume this customer might be just a household or some extremely small street-food vendor.\n",
     "\n",
-    "`data[427]` datapoint look like a wholesaler since all the values are considerably higher than median values across the dataset, even higher than 75% procentile"
+    "`data[427]` datapoint is distinct by large expenditures across all the product categories, look like it is osme kind of a retailer. "
    ]
   },
   {
@@ -489,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like `Detergents` feature was the most important, it will not be surprising if we will find correlation between `'Grocery` and `Detergents` these two features"
+    "Looks like `Detergents` was the most important feature for our `RandomForestRegressor`, since it has the highest importance score. It will not be surprising if `Grocery` and `Detergents` cprrelate with each other."
    ]
   },
   {
@@ -514,7 +490,7 @@
     "We tried to predict the amount of grocery products bought by customers depending on the amount of products of other categories they bought. \n",
     "Our RandomForestRegressor achieved 0.74 R^2 score, which means the grocery category is quite easy to predict with other product categories.\n",
     "\n",
-    "The high R^2 score means most of the variance of the grocery feature could be explained by other features, which makes it not very important for our analysis"
+    "The high R^2 score means most of the variance of the Grocery product category could be explained by other features, so this feature will not give us a lot of new information for our analysis of customers' spending habits."
    ]
   },
   {
@@ -567,9 +543,10 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Just as we noticed from descriptive statistic, the data of all products are scewed to the right with several outliers present in every category, with most of the datapoints are consentrated near 0. \n",
+    "Just as we noticed from descriptive statistic, the distribution of the data for all product categories is not normal and is scewed to the right, with several outliers with extremely large values being present in every product category, while most of the datapoints are consentrated to the left of the distribution. \n",
     "\n",
-    "From our visual inspection we notice correlation between several features: `Grocery` and `Detergents`, `Grocery` and `Milk`, `Milk` and `Detergents`, so no wonder`Detergents` feature had the highest importance score in our RandomForestRegressor predictions. \n",
+    "From our visual inspection we notice some positive correlation between several features: `Grocery` and `Detergents`, `Grocery` and `Milk`, `Milk` and `Detergents`. With the increase of value in one feature, the other one increases too. \n",
+    "Positive correlation between `Detergents` and `Grocery` product categories could explain high feature importance score for `Detergents` feature in our RandomForestRegressor predictions. \n",
     "\n",
     "Let's get more quantitative estimate by using pandas `corr()` module and `seaborn heatmap`"
    ]
@@ -720,6 +697,8 @@
     "print(display(data.corr()))\n",
     "\n",
     "corr= data.corr()\n",
+    "\n",
+    "#we can also build a quick heatmap to visualize our correlation matrix \n",
     "sns.heatmap(data.corr(), \n",
     "            xticklabels=corr.columns.values,\n",
     "            yticklabels=corr.columns.values, \n",
@@ -907,6 +886,7 @@
     }
    ],
    "source": [
+    "# see the shape pf our original dataset \n",
     "data.shape"
    ]
   },
@@ -1897,8 +1877,15 @@
     }
    ],
    "source": [
-    "# let's check out the shape of our new dataframe\n",
+    "# let's check out the shape of the dataframe after removing the outliers\n",
     "good_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We removed 22 datapoints from our dataset as outliers "
    ]
   },
   {
@@ -1931,9 +1918,9 @@
     "\n",
     "`data[66]` - outlier for 'Fresh' and 'Delicate'\n",
     "\n",
-    "From the data preprocessing perspective these points should not be removed, since they appear in more than one feature and may contain importnant information about our data\n",
+    "These points should not be removed, since they appear in more than one feature, so clearly they contain some trend and should be considered during clustering. \n",
     "\n",
-    "Our dataset is not so big, so we need to be careful with removing any information from there and therefore we might decide to keep some points detected as outliers if ther lay close to the [Q1-step, Q3+step] thresholds.\n"
+    "Our dataset is not so big, so we need to be careful with removing any information from there and therefore we might decide to keep some points defined as outliers using Tukey's method if they lay reasonably close to the [Q1-step, Q3+step] thresholds.\n"
    ]
   },
   {
