--- a/p3/customer_segments.ipynb
+++ b/p3/customer_segments.ipynb
@@ -2019,7 +2019,15 @@
     "\n",
     "2. The first principal component explains roughly 49% of the variance of the data, second - 26%, third - 10%, fourth - 9% of variance in data\n",
     "\n",
-    "3."
+    "3. The variance in data is mostly explained by first two dimensions (~75%), while the last two account only for 25% of the variance in our data. \n",
+    "\n",
+    "The first PC is represented mostly by Detergents, Milk and Grocery features and they have the highest feature weights in this component, so we can say that these features drive the main hidden trend in our data, which is most of the customers in our dataset tend to buy Milk, Grocery and Detergents together (this is the reason why we were able to predict the amount of Grocery products bought by customers with our Random Forest Regressor so easily). We notice that the weights of these three features are negative numbers, which means these features correlate positively with each other (that was visualized by our heatmap of correlation matrix) but have **inverse relationship** with the first principal component. \n",
+    "\n",
+    "The second PC captures 26% of the variance in data and is represented mostly by Fresh, Frozen and Delicatessen categories, which are driving the second biggest trend in our data, which is customers also tend to buy these three product categories together. \n",
+    "\n",
+    "The rest of the PCs represent minor trends minor trends in our data and are not that important for our analysis, the third PC is represneted mostly by Fresh and Delicatessen features, the fourth PC explain variance mostly in Frozen and Delicatessen product categories, the fifth is represented by Milk and Detergents features and sixth - by Grocery and Milk categories.\n",
+    "\n",
+    "As per [PCA definition](https://en.wikipedia.org/wiki/Principal_component_analysis) all principal components have zero correlation and are orthogonal to each other, which means that those hidden trends we discovered in data are independent: a customer may follow **several** trends in her spending habbits or one of them. "
    ]
   },
   {
@@ -2387,7 +2395,7 @@
     "**Answer:**\n",
     "The main advantages of using K-means clustering are : \n",
     "\n",
-    "1) Fast training (all we need to do is calculate the distance between the points), however for big dataset this alorithm might rove to be not efficiebt as it's complexity linearly increases as the dataset getting larger\n",
+    "1) Fast training (all we need to do is calculate the distance between the points), however for big dataset this alorithm might prove to be not efficient as it's complexity linearly increases as the dataset getting larger\n",
     "\n",
     "2) Simple and intuitive, due to it's simplicity it is very easy to debug or tune K-Means clustering model \n",
     "K-Means is a hard clustering algorithm, i.e. each point can belong to one cluster, also K_means are quite sensitive to the outliers. \n",
@@ -2396,7 +2404,7 @@
     "\n",
     "1) Cluster shape flexibility: while k-means can produce only spherical clusters, with the radius being the most distant point in the cluster, GMM is a lot more flexible in terms of cluster covariance, which means it can produce oblong eliptical clusters capturing the elongated distributions on the data points much better than k-means [2]\n",
     "\n",
-    "2) Soft clustering, instead of flagging each point to belong to a certain cluster, GMM calculates the probability tha a given point belongs to a given cluster, in other words in GMM each point belong to each cluster to a different degree [1]. \n",
+    "2) Soft clustering, instead of flagging each point to belong to a certain cluster, GMM calculates the probability tha a given point belongs to a given cluster, in other words in GMM each point belong to all clusters to a different degree [1]. \n",
     "\n",
     "Since Gaussian Mixture models are more flexible we can try to apply this algorithm to our data, experimenting with number of clusters and convariance types (GMM with 'spherical' `covarinace_type` is essentially K-Means algorithm, so we will have chance try k-means to this data too) \n",
     "\n",
@@ -2500,7 +2508,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "We tried 20 different combinations of `covariance_type` and `n_components` and the best silhoutte score was produced by GM model with spherical covariance type (which is actually K-means) with 2 components"
+    "We tried 20 different combinations of `covariance_type` and `n_components` and the best silhoutte score 0.435 was produced by GM model with spherical covariance type (which is actually K-means) with 2 components"
    ]
   },
   {
@@ -2946,7 +2954,9 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "I think changing the delivery from 5 to 3 days a week will affect mostly the customer that spend on Fresh products mostly because of the short expiry time of such products, while customers from Cluster 0 can buy more products than they need and keep some products at storage (Milk and Grocery), fresh products cannot be stored for a long time, and thus customers from Cluster 0 may be buying less but more frequently, therefore they would likely to require 5 days a week delivery. So the whileseller can assume that customers from Segment 0 are omre likely to react positively on delivery change than customers from Segment 1"
+    "I think changing the delivery from 5 to 3 days a week will affect customers that spend mostly on Fresh products because of the short expiry time of such products, while customers from Cluster 0 can buy more products than they need and keep some products in storage (Milk and Grocery), fresh products cannot be stored for a long time, and thus customers from Cluster 0 may be buying less but more frequently, therefore they would likely to require 5 days a week delivery.\n",
+    "\n",
+    "So the wholeseller can assume that customers from Segment 0 are more likely to react positively on delivery change than customers from Segment 1"
    ]
   },
   {
