--- a/p3/customer_segments.ipynb
+++ b/p3/customer_segments.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -360,11 +360,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "`data[43]` datapoint is a customer with considerable purchase costs on Milk, Grocery and Detergents categories, which are main items in cafe/restaurants expenditures. \n",
+    "`data[43]` datapoint is a customer with considerable purchase costs on Milk, Grocery and Detergents categories, his spending costs are way above average across the whole dataset (5796 , 7951 and 2881 are average values for all customers in the dataset in Milk, Grocery and Detergents product categories respectively vs. 11095, 23998,  9529 of given customer). In fact the expendictures of this customer is even higher than 75% percentile for these product categories, suggesting this customer to be some big cafe or resturant or even a network of cafes or restaurants. \n",
     "\n",
-    "`data[131]` datapoint is distinct by its small total costs across all product categories, so we may assume this customer might be just a household or some extremely small street-food vendor.\n",
+    "`data[131]` datapoint is distinct by its small total costs across all product categories, his spending costs are much lower than the dataset average values across all product categories (let's consider the product categories with the highest spendings from this customer: Fresh - 2101, Milk - 589, Frozen - 346 vs average values across the whole customers in the dataset on the sa,e product categories : Fresh - 12000, Milk - 5796, Frozen - 3072). So we may assume this customer might be just a signle household, small private business or small street-food vendor.\n",
     "\n",
-    "`data[427]` datapoint is distinct by large expenditures across all the product categories, look like it is osme kind of a retailer. "
+    "`data[427]` datapoint is distinct by large expenditures across in Fresh, Milk, Frozen product categories, the total spendings on these items are much higher than the average spendings (consider overall average values of 12000, 5796, 3072 for Fresh, Milk and Frozen categories respectively  vs purchase costs on these product categories of the given customer 31012, 16687, 15082). Thus we can assume this datapoint might respresent a retailer. "
    ]
   },
   {
@@ -2025,7 +2025,13 @@
     "\n",
     "The second PC captures 26% of the variance in data and is represented mostly by Fresh, Frozen and Delicatessen categories, which are driving the second biggest trend in our data, which is customers also tend to buy these three product categories together. \n",
     "\n",
-    "The rest of the PCs represent minor trends minor trends in our data and are not that important for our analysis, the third PC is represneted mostly by Fresh and Delicatessen features, the fourth PC explain variance mostly in Frozen and Delicatessen product categories, the fifth is represented by Milk and Detergents features and sixth - by Grocery and Milk categories.\n",
+    "While the varaibles with largest weights in the first two PCs tend to vary together (the increase in one variable entails the increase in the other ones), and the direction of these variables are the opposite to the direction of the pricncipal component (i.e. with the decrease in main variables the PC increases), the third and fourth PCs include variables that do not vary together. \n",
+    "\n",
+    "The third PC is respresented mainly by Fresh, Delicatessen and Frozen product categories. We notice that Fresh category has negative weight in this component, while Delicatessen and Frozen have possitive weights, which means the component increases when Fresh value decreases and Delicatessen and Frozen values increase. We also notice the important positive corerlation between Frozen and Delicatessen variables, so in our dataset this component expresses the third hidden trend of customers who are buying more Fresh products tend to buy less Frozen and Delicatessen products and vice versa.  \n",
+    "\n",
+    "The fourth PC is mostly represented by Frozen, Delicatessen and Detergents product categories, with Frozen and Delicatessen variables are correlated with each other and have negative weights and Detergents has positive weight, i.e. with the decrease in Fresh and Delicatessen and increase of Detergents, the component increases. So the fourth hidden trend in spending habbits of our customers is: customers who are buing more Delicatessen tend to buy les Detergents and Fresh products.   \n",
+    "\n",
+    "The rest of the PCs represent minor trends minor trends in our data and are not that important for our analysis, the fifth is represented by Milk and Detergents features and sixth - by Grocery and Milk categories.\n",
     "\n",
     "As per [PCA definition](https://en.wikipedia.org/wiki/Principal_component_analysis) all principal components have zero correlation and are orthogonal to each other, which means that those hidden trends we discovered in data are independent: a customer may follow **several** trends in her spending habbits or one of them. "
    ]
@@ -2795,11 +2801,10 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "As we see the total purchase costs of almost each category for the points derived are considerably lower than the averages in general statistics of the initial data. I think this is because the initial data contain outliers, while we perfomed clustering on clean data, with most of the outliers removed. \n",
+    "The representative customer from Segment 0 mainly spends on Fresh products, and much less on other categories, comparing the expenditures to the average values across all customers in our dataset, we see that the expenditures of this customer are significantly lower than average values (12000, 5796, 7951, 3072, 2882, 1525 on Fresh, Milk, Grocery, Frozen,Detergents,\tDelicatessen on average across the entire dataset vs 8819,1992, 2593, 2009, 343, 724 on the same product categories from this customer). Possibly, the reason might be the outliers in the dataset, which are dragging the mean value to the right of the distribution, however even comparing this customer to other measures of central tendency (median) we see that only main item of expenditures of this customer (Fresh category) is close to the overall median value, while the expenditures on the rest of the products are significantly lower. \n",
+    "Based on the analysis above we conclude the representative customer from Segment 0 might be a small-scaled or medium-scaled cafe or restaurant. \n",
     "\n",
-    "Cluster 0 represents a customer who spends mostly on Detergents as well as Milk and Grocery (all three of these categories are well above the general mean derived from data), this customer may represent some hotels (?) or maybe retailers. \n",
-    "\n",
-    "Cluster 1 represent a customer who spends mostly on Fresh products and very less on other product categories, this might be a cafe or restaurant. \n"
+    "The representative customer from Segment 1 spends mostly on Milk, Grocery and Detergents. Comparing his expenditures to the average purchase costs across all the customers, we notice that his spendings on main items are higher than the average purchase costs across the entire dataset. In fact, purchase costs of this customer on the main product categories are closer to the 75% percentile of the entire dataset, thus we can conclude that our representative customer might be some large retailer.\n"
    ]
   },
   {
@@ -2956,7 +2961,9 @@
     "\n",
     "I think changing the delivery from 5 to 3 days a week will affect customers that spend mostly on Fresh products because of the short expiry time of such products, while customers from Cluster 0 can buy more products than they need and keep some products in storage (Milk and Grocery), fresh products cannot be stored for a long time, and thus customers from Cluster 0 may be buying less but more frequently, therefore they would likely to require 5 days a week delivery.\n",
     "\n",
-    "So the wholeseller can assume that customers from Segment 0 are more likely to react positively on delivery change than customers from Segment 1"
+    "The wholeseller can assume that customers from Segment 0 are more likely to react positively on delivery change than customers from Segment 1\n",
+    "\n",
+    "Based on the derived customer segments, we can conduct A/B testing to verify more quantitatively how the changes in delivery will affect each customer segment, running the experiment (change delivery from 5 days a week to 3 days a week) on the same number of customers from each cluster and comparing the results against some fixed metric.   "
    ]
   },
   {
